# avatar_simulation

./: How_To_URDF.md  README.md  Unity_README.md
avatar_gripper_description/: CMakeLists.txt  package.xml
avatar_gripper_description/launch/: test_arm.launch  test_gripper.launch
avatar_gripper_description/meshes/: index_base.STL  thumb_base_raw.STL
avatar_gripper_description/meshes/left/: thumb_base.STL  thumb_fingertip_raw.STL  thumb_knuckle.STL  thumb_knuckle_raw.STL
avatar_gripper_description/meshes/right/: thumb_base_connector.STL
avatar_gripper_description/rviz/: test_gripper.rviz  test_gripper_left.rviz  test_gripper_right.rviz
avatar_gripper_description/test/: R.py  drake_model_test.py
avatar_gripper_description/urdf/: avatar_gripper_3f.urdf  avatar_gripper_3f.xacro  avatar_gripper_3f_example.xacro  avatar_gripper_3f_macro.xacro  avatar_gripper_3f_macro_nomimic.xacro  avatar_gripper_right.urdf  avatar_gripper_right_nomimic.urdf  generate_gripper_urdf.sh  utils.xacro
avatar_robot_description/: CMakeLists.txt  package.xml
avatar_robot_description/franka/common/: base.xacro  franka_arm.xacro  franka_robot.xacro  hand.urdf.xacro  inertial.yaml  utils.xacro
avatar_robot_description/franka/dual_panda/: dual_panda_example.urdf.xacro
avatar_robot_description/franka/panda/: panda.urdf.xacro
avatar_robot_description/launch/: publish_description_avatar.launch  test_dual_arm.launch  test_dual_panda.launch  test_single_arm.launch
avatar_robot_description/nodes/: avatar_joint_state_publisher.py
avatar_robot_description/rviz/: dual_panda_example.rviz
avatar_robot_description/urdf/: dual_panda_with_gripper.urdf  dual_panda_with_gripper.urdf.xacro  dual_panda_with_gripper_nomimic.urdf  generate_dual_arm_urdf.sh  panda_with_gripper.urdf  panda_with_gripper_nomimic.urdf
data/: dice2_2023-06-20-20-55-48.bag
