<?xml version="1.0"?>
<package format="2">
  <name>avatar_robot_description</name>
  <version>0.0.0</version>
  <description>The avatar_robot_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rui@todo.todo">rui</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>avatar_gripper_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
